# invest-ohlcv-api-to-kafka

./: Dockerfile  README.md  pyproject.toml
invest_ohlcv_api_to_kafka/: config.py  default_tickers-test.yaml  default_tickers.yaml  default_topics.yaml  main.py  topics.py
